# Matrix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Matrix_Lib/: CMakeLists.txt  comparison.hpp  matrix.cpp  matrix.hpp
Matrix_Lib/include/: array.hpp  comparison.hpp  matrix.hpp
include/: array.hpp  comparison.hpp  matrix.hpp
tests/: CMakeLists.txt  determinant_tests.cpp  operator_tests.cpp
tests/end_to_end_tests/: CMakeLists.txt  random_matrix_driver.cpp  test.sh
tests/end_to_end_tests/corner_tests/: corner_test.sh
tests/end_to_end_tests/corner_tests/bad_input_tests/: corner_test.sh
tests/end_to_end_tests/corner_tests/bad_input_tests/tests/: test2  test6  test7
tests/end_to_end_tests/corner_tests/corner_cases/: corner_test.sh
tests/end_to_end_tests/corner_tests/corner_cases/tests/: test_3
tests/end_to_end_tests/corner_tests/tests/: test_1  test_2  test_4
tests/end_to_end_tests/random_tests/: testgen.py
tests/end_to_end_tests/src/: integral_matrix_driver.cpp  random_matrix_driver.cpp  real_matrix_driver.cpp
tests/unit_tests/: CMakeLists.txt  comparison_tests.cpp  determinant_tests.cpp  operator_tests.cpp
tests/unit_tests/src/: array_tests.cpp  comparison_tests.cpp  determinant_tests.cpp  operator_tests.cpp
